force-app/main/default/objects/Portal_Sync_Association__mdt/Portal_Sync_Association__mdt.object-meta.xml
<CustomObject>
    <label>Portal Sync Association</label>
    <pluralLabel>Portal Sync Associations</pluralLabel>
</CustomObject>