force-app/main/default/objects/Portal_Sync_Association__mdt/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>When unchecked, this association is ignored -- no links are created or archived for it. Lets an admin disable an association without deleting the row or deploying code.</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>