force-app/main/default/objects/Portal_Sync_Association__mdt/fields/Association_Category__c.field-meta.xml
<CustomField>
    <fullName>Association_Category__c</fullName>
    <description>HubSpot association category for the type below: HUBSPOT_DEFINED for built-in default associations, USER_DEFINED for custom labels. Defaults to HUBSPOT_DEFINED.</description>
    <label>Association Category</label>
    <length>20</length>
    <type>Text</type>
</CustomField>