force-app/main/default/objects/Portal_Sync_Association__mdt/fields/Association_Type_Id__c.field-meta.xml
<CustomField>
    <fullName>Association_Type_Id__c</fullName>
    <description>Default HubSpot association type id, used by every portal that has no per-portal override (Association_Type_Id_TriBU__c / _CARL__c / _Spain__c). Suitable on its own for HUBSPOT_DEFINED defaults, whose ids are stable across portals (e.g. Contact-to-Company 279, Contact-to-Deal 4). Custom-object and USER_DEFINED label ids are generated per portal - leave this blank and fill the per-portal fields instead. Confirm ids via GET /crm/v4/associations/{from}/{to}/labels in each portal.</description>
    <label>Association Type Id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>