force-app/main/default/objects/Portal_Sync_Association__mdt/fields/Association_Type_Id_TriBU__c.field-meta.xml
<CustomField>
    <fullName>Association_Type_Id_TriBU__c</fullName>
    <description>TriBU&apos;s HubSpot association type id for this association, overriding Association_Type_Id__c in that portal only. Set this when the id differs per portal - custom-object and USER_DEFINED label ids are generated per portal (look each up via GET /crm/v4/associations/{from}/{to}/labels). Leave blank for HUBSPOT_DEFINED ids, which are stable across portals and come from Association_Type_Id__c. Blank or 0 in both fields means the association is skipped for TriBU (and dead-lettered) rather than asserted with an unknown type.</description>
    <label>Association Type Id (TriBU)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>