force-app/main/default/objects/Portal_Sync_Association__mdt/fields/From_Object__c.field-meta.xml
<CustomField>
    <fullName>From_Object__c</fullName>
    <description>The Portal_Sync_Object__mdt record that OWNS the association (the &quot;from&quot; side of the HubSpot v4 association endpoint). This object&apos;s outbox drives the association pass.</description>
    <label>From Object</label>
    <referenceTo>Portal_Sync_Object__mdt</referenceTo>
    <relationshipLabel>Portal Sync Associations (From)</relationshipLabel>
    <relationshipName>Portal_Sync_Associations_From</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>