force-app/main/default/objects/Portal_Sync_Association__mdt/fields/Junction_From_Field__c.field-meta.xml
<CustomField>
    <fullName>Junction_From_Field__c</fullName>
    <description>Source Type = Junction only. API name of the field on the junction object pointing at the From record&apos;s Salesforce Id, e.g. ContactId on OpportunityContactRole.</description>
    <label>Junction From Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>