force-app/main/default/objects/Portal_Sync_Association__mdt/fields/Junction_Object__c.field-meta.xml
<CustomField>
    <fullName>Junction_Object__c</fullName>
    <description>Source Type = Junction only. API name of the junction SObject that links the two records, e.g. OpportunityContactRole.</description>
    <label>Junction Object</label>
    <length>255</length>
    <type>Text</type>
</CustomField>