force-app/main/default/objects/Portal_Sync_Association__mdt/fields/Relationship_Field__c.field-meta.xml
<CustomField>
    <fullName>Relationship_Field__c</fullName>
    <description>Source Type = Lookup only. API name of the foreign-key field on the From object that holds the related (To) record&apos;s Salesforce Id, e.g. AccountId on Contact.</description>
    <label>Relationship Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>