force-app/main/default/objects/Portal_Sync_Association__mdt/fields/Source_Type__c.field-meta.xml
<CustomField>
    <fullName>Source_Type__c</fullName>
    <description>How the related record id is found in Salesforce: &quot;Lookup&quot; (a foreign-key field on the From object, e.g. Contact.AccountId) or &quot;Junction&quot; (a separate junction object, e.g. OpportunityContactRole).</description>
    <label>Source Type</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>