force-app/main/default/objects/Portal_Sync_Association__mdt/fields/Syncs_To_CARL__c.field-meta.xml
<CustomField>
    <fullName>Syncs_To_CARL__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, this association is asserted in the CARL portal (only where both records also sync to CARL).</description>
    <label>Syncs To CARL</label>
    <type>Checkbox</type>
</CustomField>