force-app/main/default/objects/Portal_Sync_Association__mdt/fields/Syncs_To_Spain__c.field-meta.xml
<CustomField>
    <fullName>Syncs_To_Spain__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, this association is asserted in the Spain portal (only where both records also sync to Spain).</description>
    <label>Syncs To Spain</label>
    <type>Checkbox</type>
</CustomField>