force-app/main/default/objects/Portal_Sync_Association__mdt/fields/Syncs_To_TriBU__c.field-meta.xml
<CustomField>
    <fullName>Syncs_To_TriBU__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, this association is asserted in the TriBU portal (only where both records also sync to TriBU).</description>
    <label>Syncs To TriBU</label>
    <type>Checkbox</type>
</CustomField>