force-app/main/default/objects/Portal_Sync_Association__mdt/fields/To_Object__c.field-meta.xml
<CustomField>
    <fullName>To_Object__c</fullName>
    <description>The Portal_Sync_Object__mdt record on the other end of the association (the &quot;to&quot; side). Supplies the HubSpot path and sf-id property used to resolve the related record&apos;s HubSpot id.</description>
    <label>To Object</label>
    <referenceTo>Portal_Sync_Object__mdt</referenceTo>
    <relationshipLabel>Portal Sync Associations (To)</relationshipLabel>
    <relationshipName>Portal_Sync_Associations_To</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>